Chap07_Basic Types/knkcch07e03.txt
==========================================================================
@@@@ Exercise 3 (Section 7.2): knkcch07e03: Which of the following are not legal 
types in C?
(a) short unsigned int
(b) short float
(c) long double
(d) unsigned long
==========================================================================
SOLUTION:
@@@@ Option (b) is not a legal type.
@@@@ Check PROGRAM OUTPUT.
==========================================================================
PROGRAM: (FLAGS: -std=c99): knkcch07e03.c
#include<stdio.h>
//------------------------START OF MAIN()--------------------------------------
int main(void)
{
	printf("++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n");
	
	short unsigned int a;
	short float b;
	long double c;
	unsigned long d;
	
	printf("\n++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n");
	return 0;
}
//-------------------------END OF MAIN()---------------------------------------
//---------------------------------------------------------------------------
==========================================================================
PROGRAM OUTPUT:
knkcch07e03.c:18:2: error: 'short float' is invalid
        short float b;
        ^
1 error generated.
==========================================================================